--- a/index.html
+++ b/index.html
@@ -1,20 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bids</title>
 </head>
+
 <body>
     <h2>Upwork</h2>
-    <p>Hi! Ready to help with development. My web-development experience is more than 3 years and I guarantee full compliance with modern standards and adaptability. I also always carry out basic work on seo optimization as a bonus.
+    <p>Dear Hiring Manager,
+
+        I would like to submit myself as a candidate for the position of WordPress Developer for your current project. I
+        have a B.Sc. in Computer Science, and along with that I have achieved 3 years of experience as
+        WordPress Developer with the help of my voluntary WordPress certification. I can confidently guarantee the
+        success of your project within a brief period of time.
+        All my projects are made according to all modern development requirements, they have maximum adaptability.
+        As a bonus, I do all the necessary plugin setup and SEO optimization work.
         Last works:
-        metrograincleaner.com
-        nftgorillas.io/gorillas-nft-copy
-        https://servusbud.od.ua/gotovyie-doma/
-        Portfolio on Behance: behance.net/vladorlov
-        With best regards, Vladimir
+        metrograincleaner.com - Awesome corporate website for the sale of grain cleaners
+        nftgorillas.io/gorillas-nft-copy - Perfect information page for the NFT project
+        https://servusbud.od.ua/gotovyie-doma - A simple page with information about buying a property
+        Portfolio on Behance with more visuals: behance.net/vladorlov
+        Sinserly, Vladimir
     </p>
 </body>
+
 </html>
